unified color scheme

--- a/public/markup/contact.html
+++ b/public/markup/contact.html
@@ -101,20 +101,11 @@
     </div>
   </div>
 
+  <!-- SECTION TITLE -->
+  <h1 id="section-title-text">Connect with us</h1>
+
   <!-- CONTACT FORM -->
   <div id="contact-container">
-
-    <!-- jackhammerkid -->
-    <img id="jackhammerkid" src="../images/pw_jackhammerkid.svg" alt="pw_jackhammerkid.svg">
-
-    <!-- section title -->
-    <h3 id="section-title-text">Do yourself a favor... Connect with us.</h3>
-    <div id="socials-flexbox-top">
-      <img width="25px" class="social-icon" id="facebook-icon" src="images/facebook_icon.svg" alt="">
-      <img width="25px" class="social-icon" id="twitter-icon" src="images/twitter_icon.svg" alt="">
-      <img width="25px" class="social-icon" id="instagram-icon" src="images/instagram_icon.svg" alt="">
-      <img width="25px" class="social-icon" id="email-icon" src="images/email_icon.svg" alt="">
-    </div>
 
     <!-- map -->
     <div class="contact-section" id="map-container">
@@ -185,7 +176,7 @@
     </form>
 
     <!-- manhole -->
-    <img id="manhole" src="../images/pw_manhole.png" alt="pw_manhole.png">
+    <img id="manhole" src="../images/pw_manhole_white.png" alt="pw_manhole.png">
 
   </div>
 
@@ -193,15 +184,6 @@
 
   <!-- FOOTER -->
   <div id="footer">
-
-      <!-- NEWSLETTER -->
-      <!-- <div class="footer-half" id="newsletter">
-        <h5 id="join-our-newsletter">Join Our Newsletter</h5>
-        <form id="newsletter-signup-form">
-          <input type="text" value="useremail420@mail.com">
-        </form>
-        <button class="submit-button">Submit</button>
-      </div> -->
 
       <!-- CONTACT -->
       <div class="footer-half" id="contact">
