--- a/public/markup/events.html
+++ b/public/markup/events.html
@@ -80,37 +80,15 @@
     </div>
   </div>
 
-
-  <!-- DROPLET -->
-  <!-- <div class="wrap">
-    <div class="drop-outer">
-      <svg class="drop" viewBox="0 0 40 40" version="1.1"
-      xmlns="http://www.w3.org/2000/svg">
-      <circle cx="20" cy="20" r="20"/>
-      </svg>
-    </div>
-  </div> -->
-
   <!-- EVENTS -->
   <h1 id="in-the-works">In the works</h1>
   <div id="event-container">
-    <div id="event-nav">
-    </div>
     <div id="event-list"></div>
   </div>
-  <img id="pw-manhole-white" src="../images/pw_manhole.png" alt="pw_manhole_white.png">
+  <img id="pw-manhole-white" src="../images/pw_manhole_white.png" alt="pw_manhole_white.png">
 
   <!-- FOOTER -->
   <div class="section" id="footer">
-
-    <!-- NEWSLETTER -->
-    <!-- <div class="footer-half" id="newsletter">
-      <h5 id="join-our-newsletter">LOCAL 161 EMAIL SIGNUP</h5>
-      <form id="newsletter-signup-form">
-        <input type="text" value="useremail420@mail.com">
-      </form>
-      <button class="submit-button">Submit</button>
-    </div> -->
 
     <!-- CONTACT -->
     <div id="footer">
@@ -128,7 +106,7 @@
   </div>
 
   <!-- GRIT -->
-  <img id="contact-background-image" src="../images/grit_5.png" alt="grit_5.png">
+  <img id="grit" src="../images/grit_5.png" alt="grit_5.png">
 
   <!-- SCRIPTS -->
   <script type="text/javascript" src="../scripts/handlebars-v4.0.11.js"></script>
