--- a/public/markup/staff.html
+++ b/public/markup/staff.html
@@ -101,7 +101,7 @@
       </div>
     </div>
 
-    <h1 id="staff-only">Staff Only:</h1>
+    <h1 id="staff-only">Staff Only</h1>
 
     <!-- EVENT REGISTRATION FORM -->
     <div id="event-registration-form-container">
@@ -121,18 +121,11 @@
         Description:<input class="input-field" id="description-input-field" type="text" name="description">
         <button class="submit-button" id="staff-submit-button">Submit</button>
       </form>
-
-      <!-- NAV -->
-      <div id="form-nav">
-
-      </div>
-
     </div>
 
 
     <!-- IMAGES -->
-    <img src="../images/pw_manhole.png" alt="pw_manhole.png" id="manhole">
-    <img src="../images/backwall1.png" alt="backwall1.png" id="backwall1">
+    <img src="../images/pw_manhole_white.png" alt="pw_manhole.png" id="manhole">
     <img id="staff-background-image" src="../images/grit_5.png" alt="grit_5.png">
 
     <!-- FOOTER -->
@@ -152,6 +145,9 @@
         </div>
       </div>
     </div>
+
+    <!-- GRIT -->
+    <img id="grit" src="../images/grit_5.png" alt="grit_5.png">
 
     <!-- SCRIPTS -->
     <script src="../scripts/form-loader.js"></script>
