fixed file paths

--- a/public/markup/about.html
+++ b/public/markup/about.html
@@ -20,7 +20,7 @@
   <div id="header-spacer"></div>
   <div class="section" id="header">
 
-    <a id="home-link" href="/"><svg version="1.1" id="header-logo" xmlns="http://www.w3.org/2000/svg"      xmlns:xlink="http://www.w3.org/1999/xlink"
+    <a id="home-link" href="/publicsf"><svg version="1.1" id="header-logo" xmlns="http://www.w3.org/2000/svg"      xmlns:xlink="http://www.w3.org/1999/xlink"
     viewBox="0 0 454.2 43.9" height="18px" style="enable-background:new 0 0 454.2 43.9;" xml:space="preserve">
 
       <style>
@@ -94,10 +94,10 @@
     </svg></a>
 
       <div id="nav-container">
-        <a href="/staff"><button class="nav-button">Staff</button></a>
-        <a href="/contact"><button class="nav-button">Contact</button></a>
-        <a href="/about"><button class="nav-button">About</button></a>
-        <a href="/events"><button class="nav-button">Events</button></a>
+        <a href="./staff"><button class="nav-button">Staff</button></a>
+        <a href="./contact"><button class="nav-button">Contact</button></a>
+        <a href="./about"><button class="nav-button">About</button></a>
+        <a href="./events"><button class="nav-button">Events</button></a>
       </div>
     </div>
 
@@ -108,7 +108,7 @@
   <p id="about-text">Public Works is a music, arts and community space located in the heart of San Francisco's Mission District.</p>
 
   <!-- MANHOLE -->
-  <img id="pw-manhole-white" src="../images/pw_manhole_white.png" alt="pw_manhole_white.png">
+  <img id="pw-manhole-white" src="./images/pw_manhole_white.png" alt="pw_manhole_white.png">
 
   <!-- FOOTER -->
   <div class="section" id="footer">
@@ -128,7 +128,7 @@
   </div>
 
   <!-- GRIT -->
-  <img id="grit" src="../images/grit_5.png" alt="grit_5.png">
+  <img id="grit" src="./images/grit_5.png" alt="grit_5.png">
 
 </body>
 </html>
