--- a/public/markup/contact.html
+++ b/public/markup/contact.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Public Works Contact</title>
-  <link rel="stylesheet" href="../styles/master.css">
-  <link rel="stylesheet" href="../styles/contact.css">
+  <link rel="stylesheet" href="./styles/master.css">
+  <link rel="stylesheet" href="./styles/contact.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,600" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald:400,600" rel="stylesheet">
@@ -20,7 +20,7 @@
   <div id="header-spacer"></div>
   <div id="header">
 
-    <a id="home-link" href="/"><svg version="1.1" id="header-logo" xmlns="http://www.w3.org/2000/svg"      xmlns:xlink="http://www.w3.org/1999/xlink"
+    <a id="home-link" href="/publicsf"><svg version="1.1" id="header-logo" xmlns="http://www.w3.org/2000/svg"      xmlns:xlink="http://www.w3.org/1999/xlink"
     viewBox="0 0 454.2 43.9" height="18px" style="enable-background:new 0 0 454.2 43.9;" xml:space="preserve">
 
       <style>
@@ -94,10 +94,10 @@
     </svg></a>
 
     <div id="nav-container">
-      <a href="/staff"><button class="nav-button">Staff</button></a>
-      <a href="/contact"><button class="nav-button">Contact</button></a>
-      <a href="/about"><button class="nav-button">About</button></a>
-      <a href="/events"><button class="nav-button">Events</button></a>
+      <a href="./staff"><button class="nav-button">Staff</button></a>
+      <a href="./contact"><button class="nav-button">Contact</button></a>
+      <a href="./about"><button class="nav-button">About</button></a>
+      <a href="./events"><button class="nav-button">Events</button></a>
     </div>
   </div>
 
@@ -120,7 +120,7 @@
       <div class="faq-item">
         <div class="question-box text-container" id="question-box-1">
           <p class="faq-text question-text">How can I check for my lost items?</p>
-          <img src="/images/down_arrow.svg" alt="down_arrow.svg" class="faq-down-arrow" id="faq-expand-1">
+          <img src="./images/down_arrow.svg" alt="down_arrow.svg" class="faq-down-arrow" id="faq-expand-1">
         </div>
         <div class="answer-box text-container" id="answer-box-1">
           <p class="faq-text answer-text" >Please use our contact form to check our lost and found. In your submission, please describe your lost item(s) in detail. We typically respond within one or two business days.</p>
@@ -129,7 +129,7 @@
       <div class="faq-item">
         <div class="question-box text-container" id="question-box-2">
           <p class="faq-text question-text">Do you provide bottle service?</p>
-          <img src="/images/down_arrow.svg" alt="down_arrow.svg" class="faq-down-arrow" id="faq-expand-2">
+          <img src="./images/down_arrow.svg" alt="down_arrow.svg" class="faq-down-arrow" id="faq-expand-2">
         </div>
         <div class="answer-box text-container"  id="answer-box-2">
           <p class="faq-text answer-text">We do not provide bottle service at Public Works</p>
@@ -138,7 +138,7 @@
       <div class="faq-item">
         <div class="question-box text-container" id="question-box-3">
           <p class="faq-text question-text">Do you have any job openings?</p>
-          <img src="/images/down_arrow.svg" alt="down_arrow.svg" class="faq-down-arrow" id="faq-expand-3">
+          <img src="./images/down_arrow.svg" alt="down_arrow.svg" class="faq-down-arrow" id="faq-expand-3">
         </div>
         <div class="answer-box text-container" id="answer-box-3">
           <p class="faq-text answer-text">We are always on the lookout for talented and versatile individuls with a passion for live events. If this is you, please use our contact form to submit a resume and cover letter.</p>
@@ -176,30 +176,29 @@
     </form>
 
     <!-- manhole -->
-    <img id="manhole" src="../images/pw_manhole_white.png" alt="pw_manhole.png">
+    <img id="manhole" src="./images/pw_manhole_white.png" alt="pw_manhole.png">
 
   </div>
 
-  <img id="contact-background-image" src="../images/grit_5.png" alt="grit_5.png">
+  <img id="contact-background-image" src="./images/grit_5.png" alt="grit_5.png">
 
   <!-- FOOTER -->
   <div id="footer">
 
-      <!-- CONTACT -->
-      <div class="footer-half" id="contact">
-        <img id="footer-logo" height="20px" src="images/pw_logo_type_black.svg" alt="pw_logo_type_black.svg"/>
-        <div id="socials-flexbox">
-          <img width="25px" class="social-icon" id="facebook-icon" src="images/facebook_icon.svg" alt="">
-          <img width="25px" class="social-icon" id="twitter-icon" src="images/twitter_icon.svg" alt="">
-          <img width="25px" class="social-icon" id="instagram-icon" src="images/instagram_icon.svg" alt="">
-          <img width="25px" class="social-icon" id="email-icon" src="images/email_icon.svg" alt="">
-        </div>
+    <!-- CONTACT -->
+    <div class="footer-half" id="contact">
+      <img id="footer-logo" height="20px" src="images/pw_logo_type_black.svg" alt="pw_logo_type_black.svg"/>
+      <div id="socials-flexbox">
+        <img width="25px" class="social-icon" id="facebook-icon" src="images/facebook_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="twitter-icon" src="images/twitter_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="instagram-icon" src="images/instagram_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="email-icon" src="images/email_icon.svg" alt="">
       </div>
     </div>
-  </body>
+  </div>
 
-  <script src="../scripts/faq.js"></script>
-  <script src="../scripts/map.js"></script>
+  <script src="./scripts/faq.js"></script>
+  <script src="./scripts/map.js"></script>
   <script async defer
    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX8uRnSrRrXN1tKTIlkBORDkRGO2pikPg&callback=initMap">
  </script>
