--- a/public/markup/index.html
+++ b/public/markup/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Public Works Home</title>
-    <link rel="stylesheet" href="/styles/master.css">
+    <link rel="stylesheet" href="./styles/master.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,600" rel="stylesheet">
@@ -19,7 +19,7 @@
     <div id="header-spacer"></div>
     <div class="section" id="header">
 
-      <a id="home-link" href="/"><svg version="1.1" id="header-logo" xmlns="http://www.w3.org/2000/svg"      xmlns:xlink="http://www.w3.org/1999/xlink"
+      <a id="home-link" href="/publicsf"><svg version="1.1" id="header-logo" xmlns="http://www.w3.org/2000/svg"      xmlns:xlink="http://www.w3.org/1999/xlink"
       viewBox="0 0 454.2 43.9" height="18px" style="enable-background:new 0 0 454.2 43.9;" xml:space="preserve">
 
         <style>
@@ -95,10 +95,10 @@
       </svg></a>
 
       <div id="nav-container">
-        <a href="/staff"><button class="nav-button">Staff</button></a>
-        <a href="/contact"><button class="nav-button">Contact</button></a>
-        <a href="/about"><button class="nav-button">About</button></a>
-        <a href="/events"><button class="nav-button">Events</button></a>
+        <a href="./staff"><button class="nav-button">Staff</button></a>
+        <a href="./contact"><button class="nav-button">Contact</button></a>
+        <a href="./about"><button class="nav-button">About</button></a>
+        <a href="./events"><button class="nav-button">Events</button></a>
       </div>
     </div>
 
@@ -166,15 +166,6 @@
     <!-- FOOTER -->
     <div class="section" id="footer">
 
-      <!-- NEWSLETTER -->
-      <!-- <div class="footer-half" id="index-newsletter">
-        <h5 id="join-our-newsletter">Join Our Newsletter</h5>
-        <form id="newsletter-signup-form">
-          <input type="text" value="useremail420@mail.com">
-        </form>
-        <button class="submit-button">Submit</button>
-      </div> -->
-
       <!-- CONTACT -->
       <div class="footer-half" id="contact">
           <img id="footer-logo" height="20px" src="images/pw_logo_type_black.svg" alt="pw_logo_type_black.svg"/>
@@ -189,8 +180,8 @@
 
     </div>
 
-    <script src="/scripts/auto-scroll.js"></script>
-    <script src="/scripts/hero-resize.js"></script>
+    <script src="./scripts/auto-scroll.js"></script>
+    <script src="./scripts/hero-resize.js"></script>
 
   </body>
 
