--- a/public/markup/staff.html
+++ b/public/markup/staff.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Public Works Home</title>
-    <link rel="stylesheet" href="../styles/master.css">
-    <link rel="stylesheet" href="../styles/staff.css">
+    <link rel="stylesheet" href="./styles/master.css">
+    <link rel="stylesheet" href="./styles/staff.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,600" rel="stylesheet">
@@ -18,7 +18,7 @@
     <div id="header-spacer"></div>
     <div class="section" id="header">
 
-      <a id="home-link" href="/"><svg version="1.1" id="header-logo" xmlns="http://www.w3.org/2000/svg"      xmlns:xlink="http://www.w3.org/1999/xlink"
+      <a id="home-link" href="/publicsf"><svg version="1.1" id="header-logo" xmlns="http://www.w3.org/2000/svg"      xmlns:xlink="http://www.w3.org/1999/xlink"
       viewBox="0 0 454.2 43.9" height="18px" style="enable-background:new 0 0 454.2 43.9;" xml:space="preserve">
 
         <style>
@@ -94,10 +94,10 @@
       </svg></a>
 
       <div id="nav-container">
-        <a href="/staff"><button class="nav-button">Staff</button></a>
-        <a href="/contact"><button class="nav-button">Contact</button></a>
-        <a href="/about"><button class="nav-button">About</button></a>
-        <a href="/events"><button class="nav-button">Events</button></a>
+        <a href="./staff"><button class="nav-button">Staff</button></a>
+        <a href="./contact"><button class="nav-button">Contact</button></a>
+        <a href="./about"><button class="nav-button">About</button></a>
+        <a href="./events"><button class="nav-button">Events</button></a>
       </div>
     </div>
 
@@ -125,8 +125,8 @@
 
 
     <!-- IMAGES -->
-    <img src="../images/pw_manhole_white.png" alt="pw_manhole.png" id="manhole">
-    <img id="staff-background-image" src="../images/grit_5.png" alt="grit_5.png">
+    <img src="./images/pw_manhole_white.png" alt="pw_manhole.png" id="manhole">
+    <img id="staff-background-image" src="./images/grit_5.png" alt="grit_5.png">
 
     <!-- FOOTER -->
     <div class="section" id="footer">
@@ -134,23 +134,20 @@
       <!-- CONTACT -->
       <div id="footer">
         <div class="footer-half" id="contact">
-          <img id="footer-logo" height="20px" src="images/pw_logo_type_black.svg" alt="pw_logo_type_black.svg"/>
+          <img id="footer-logo" height="20px" src="./images/pw_logo_type_black.svg" alt="pw_logo_type_black.svg"/>
           <h6 id="address">161 Erie St, San Francisco, CA</h6>
           <div id="socials-flexbox">
-            <img width="25px" class="social-icon" id="facebook-icon" src="images/facebook_icon.svg" alt="">
-            <img width="25px" class="social-icon" id="twitter-icon" src="images/twitter_icon.svg" alt="">
-            <img width="25px" class="social-icon" id="instagram-icon" src="images/instagram_icon.svg" alt="">
-            <img width="25px" class="social-icon" id="email-icon" src="images/email_icon.svg" alt="">
+            <img width="25px" class="social-icon" id="facebook-icon" src="./images/facebook_icon.svg" alt="">
+            <img width="25px" class="social-icon" id="twitter-icon" src="./images/twitter_icon.svg" alt="">
+            <img width="25px" class="social-icon" id="instagram-icon" src="./images/instagram_icon.svg" alt="">
+            <img width="25px" class="social-icon" id="email-icon" src="./images/email_icon.svg" alt="">
           </div>
         </div>
       </div>
     </div>
 
     <!-- GRIT -->
-    <img id="grit" src="../images/grit_5.png" alt="grit_5.png">
-
-    <!-- SCRIPTS -->
-    <script src="../scripts/form-loader.js"></script>
+    <img id="grit" src="./images/grit_5.png" alt="grit_5.png">
 
   </body>
 </html>
