--- a/public/markup/index.html
+++ b/public/markup/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Public Works Home</title>
     <link rel="stylesheet" href="./styles/master.css">
+    <link rel="stylesheet" href="./styles/home.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,600" rel="stylesheet">
@@ -94,18 +95,17 @@
         </g>
       </svg></a>
 
+      <!-- NAV -->
       <div id="nav-container">
-        <a href="./staff"><button class="nav-button">Staff</button></a>
-        <a href="./contact"><button class="nav-button">Contact</button></a>
-        <a href="./about"><button class="nav-button">About</button></a>
+        <a href="./connect"><button class="nav-button">Connect</button></a>
         <a href="./events"><button class="nav-button">Events</button></a>
+        <a href="./local161"><button class="nav-button">Local 161</button></a>
       </div>
+
     </div>
 
     <!-- HERO -->
-    <div class="section" id="hero">
-      <img id="icon" height="130px" src="images/pw_logo_icon.svg" alt="pw_logo_icon.svg"></img>
-    </div>
+    <div class="section" id="hero"></div>
 
     <!-- STATEMENT -->
     <div class="section" id="statement">
@@ -164,21 +164,19 @@
     </div>
 
     <!-- FOOTER -->
-    <div class="section" id="footer">
-
-      <!-- CONTACT -->
-      <div class="footer-half" id="contact">
-          <img id="footer-logo" height="20px" src="images/pw_logo_type_black.svg" alt="pw_logo_type_black.svg"/>
-          <h6 id="address">161 Erie St, San Francisco, CA</h6>
-          <div id="socials-flexbox">
-            <img width="25px" class="social-icon" id="facebook-icon" src="images/facebook_icon.svg" alt="">
-            <img width="25px" class="social-icon" id="twitter-icon" src="images/twitter_icon.svg" alt="">
-            <img width="25px" class="social-icon" id="instagram-icon" src="images/instagram_icon.svg" alt="">
-            <img width="25px" class="social-icon" id="email-icon" src="images/email_icon.svg" alt="">
-          </div>
+    <div class="footer">
+      <img class="footer-logo" height="20px" src="images/pw_logo_type_black.svg" alt="pw_logo_type_black.svg"/>
+      <p class="address">161 Erie St, San Francisco, CA</p>
+      <div class="socials-flexbox">
+        <img width="25px" class="social-icon" id="facebook-icon" src="images/facebook_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="twitter-icon" src="images/twitter_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="instagram-icon" src="images/instagram_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="email-icon" src="images/email_icon.svg" alt="">
       </div>
-
     </div>
+
+    <!-- GRIT -->
+    <img id="grit" src="./images/grit_5.png" alt="grit_5.png">
 
     <script src="./scripts/auto-scroll.js"></script>
     <script src="./scripts/hero-resize.js"></script>
