--- a/public/markup/index.html
+++ b/public/markup/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Public Works Home</title>
     <link rel="stylesheet" href="./styles/master.css">
-    <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="./styles/index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,600" rel="stylesheet">
@@ -104,82 +104,29 @@
 
     </div>
 
-    <!-- HERO -->
-    <div class="section" id="hero"></div>
-
-    <!-- STATEMENT -->
-    <div class="section" id="statement">
-      <div id="marquee-container">
-        <h3 id="statement-text">Giving the people what they want.</h3>
-      </div>
+    <!-- MAIN CONTENT -->
+    <div class="main-content">
+      <h1 id="welcome-to-public-works">Welcome to public works</h1>
+      <img class="stamp" src="./images/white_stamp.png" alt="white_stamp.png">
     </div>
 
-    <!-- IN THE WORKS -->
-    <div class="section" id="intheworks">
-
-      <h2 id="intheworks-header">In The Works</h2>
-
-      <div id="event-flexbox-featured">
-
-        <!-- EVENT 1 -->
-        <div class="featured-event">
-          <div class="featured-image" id="featured-image-left"></div>
-          <div class="featured-text" id="featured-text-left">
-            <h4 class="featured-date">Friday, March 2nd</h4>
-            <h3 class="featured-act">Rodriguez Jr.</h3>
-            <h3 class="featured-act">Patrice Bämual</h3>
-            <h3 class="featured-act">Thomas Von Party</h3>
-          </div>
-
-          <button class="featured-button" id="button-left">More Info</button>
-        </div>
-
-        <!-- EVENT 2 -->
-        <div class="featured-event">
-            <div class="featured-image" id="featured-image-middle"></div>
-            <div class="featured-text" id="featured-text-middle">
-              <h4 class="featured-date">Saturday, March 3rd</h4>
-              <h3 class="featured-act">Robata Oblongata</h3>
-              <h3 class="featured-act">SF Burnal Equinox</h3>
-            </div>
-
-            <button class="featured-button" id="button-middle">More Info</button>
-          </div>
-
-        <!-- EVENT 3 -->
-        <div class="featured-event">
-            <div class="featured-image" id="featured-image-right"></div>
-            <div class="featured-text" id="featured-text-right">
-              <h4 class="featured-date">Tuesday, March 6th</h4>
-              <h3 class="featured-act">Odd Salon</h3>
-            </div>
-
-            <button class="featured-button" id="button-right">More Info</button>
-          </div>
-
-      </div>
-
-      <button class="button" id="view-all-events">View All Events</button>
-
-    </div>
+    <!-- BACKGROUND IMAGE -->
+    <img src="./images/bg6.jpg" alt="bg6.jpg" class="background-image">
 
     <!-- FOOTER -->
     <div class="footer">
-      <img class="footer-logo" height="20px" src="images/pw_logo_type_black.svg" alt="pw_logo_type_black.svg"/>
+      <img class="footer-logo" src="./images/pw_logo_type_white.svg" alt="pw_logo_type_white.svg"/>
       <p class="address">161 Erie St, San Francisco, CA</p>
       <div class="socials-flexbox">
-        <img width="25px" class="social-icon" id="facebook-icon" src="images/facebook_icon.svg" alt="">
-        <img width="25px" class="social-icon" id="twitter-icon" src="images/twitter_icon.svg" alt="">
-        <img width="25px" class="social-icon" id="instagram-icon" src="images/instagram_icon.svg" alt="">
-        <img width="25px" class="social-icon" id="email-icon" src="images/email_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="facebook-icon" src="./images/facebook_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="twitter-icon" src="./images/twitter_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="instagram-icon" src="./images/instagram_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="email-icon" src="./images/email_icon.svg" alt="">
       </div>
     </div>
 
     <!-- GRIT -->
     <img id="grit" src="./images/grit_5.png" alt="grit_5.png">
-
-    <script src="./scripts/auto-scroll.js"></script>
-    <script src="./scripts/hero-resize.js"></script>
 
   </body>
 
