--- a/public/markup/events.html
+++ b/public/markup/events.html
@@ -80,28 +80,27 @@
 
     </div>
 
-    <!-- EVENTS -->
-    <h1 id="in-the-works">In the works</h1>
-    <div id="event-container">
-      <div id="add-event-container">
-        <button class="nav-button" id="add-event-button" onclick="displayAddEventModule()">Add Event</button>
-        <div id="add-event-module-container"></div>
-      </div>
+    <!-- MAIN CONTENT -->
+    <div class="main-content">
+      <!-- EVENTS -->
+      <h1 id="in-the-works">In the works</h1>
+      <div id="add-event-module-container"></div>
       <div id="event-list"></div>
+      <!-- STAMP -->
+      <img class="stamp" src="./images/white_stamp.png" alt="white_stamp.png">
+      <!-- MANHOLE -->
+      <img class="manhole" src="./images/pw_manhole_white.png" alt="pw_manhole_white.png">
     </div>
-
-    <!-- MANHOLE -->
-    <img class="manhole" src="./images/pw_manhole_white.png" alt="pw_manhole_white.png">
 
     <!-- FOOTER -->
     <div class="footer">
-      <img class="footer-logo" height="20px" src="images/pw_logo_type_black.svg" alt="pw_logo_type_black.svg"/>
+      <img class="footer-logo" src="./images/pw_logo_type_white.svg" alt="pw_logo_type_white.svg"/>
       <p class="address">161 Erie St, San Francisco, CA</p>
       <div class="socials-flexbox">
-        <img width="25px" class="social-icon" id="facebook-icon" src="images/facebook_icon.svg" alt="">
-        <img width="25px" class="social-icon" id="twitter-icon" src="images/twitter_icon.svg" alt="">
-        <img width="25px" class="social-icon" id="instagram-icon" src="images/instagram_icon.svg" alt="">
-        <img width="25px" class="social-icon" id="email-icon" src="images/email_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="facebook-icon" src="./images/facebook_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="twitter-icon" src="./images/twitter_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="instagram-icon" src="./images/instagram_icon.svg" alt="">
+        <img width="25px" class="social-icon" id="email-icon" src="./images/email_icon.svg" alt="">
       </div>
     </div>
 
@@ -110,61 +109,23 @@
 
     <!-- Handlebars Templates -->
     <script id="event-template" type="text/x-handlebars-template">
-      <div class="event-module" id=event-module{{eventbriteID}}>
-        <div class="event-image" style="background-image: url({{image}})"></div>
-        <h4 class="text event-date">{{start}}</h4>
-        <h2 class="text event-artist">{{artists}}</h2>
-        <h4 class="text event-room">{{room}}<h4>
-        <h4 class="text event-price">{{price}}</h4>
-        <button type="button" class="edit-button" id="edit-button-{{eventbriteID}}" onclick="editEvent(event)"></button>
-        <button type="button" class="delete-button" id="delete-button-{{eventbriteID}}" onclick="deleteEvent(event)"></button>
-        <button class="purchase button" id={{eventbriteID}} type="button">Get Tickets</button>
+      <div class="module-container" id=event-module{{eventbriteID}} style="background-image: url({{logo.original.url}})">
+        <div class="event-text-area">
+          <p class="date">{{start.local}}</p>
+          <p class="headliner">{{name.text}}</p>
+          <p class="price">{{description.text}}</p>
+          <button class="buy-button" id={{id}} type="button">Get Tickets</button>
+        </div>
       </div>
     </script>
 
-    <script id="add-event-template" type="text/x-handlebars-template">
-      <form class="event-submission-form" id="event-add-form">
-        <div class="edit-event-image" style='{{image}}'></div>
-        <input class="edit-event-date" type="datetime-local" name="start" placeholder="date">
-        <input class="edit-event-eventbriteID" type="text" name="eventbriteID" placeholder="eventbriteID">
-        <input class="edit-event-artist" type="text" name="artists" placeholder="artists">
-        <input class="edit-event-room" type="text" name="room" placeholder="room">
-        <input class="edit-event-price" type="text" name="price" placeholder="price">
-        <button class="button" id={{eventbriteID}} type="button" onclick="addEvent()">Add Event</button>
-      </form>
-    </script>
-
-    <script id="event-contents-template" type="text/x-handlebars-template">
-      <div class="event-image" style="background-image: url({{image}})"></div>
-      <h4 class="text event-date">{{start}}</h4>
-      <h2 class="text event-artist">{{artists}}</h2>
-      <h4 class="text event-room">{{room}}<h4>
-      <h4 class="text event-price">{{price}}</h4>
-      <button type="button" class="delete-button" id="delete-button-{{eventbriteID}}" onclick="deleteEvent(event)"></button>
-      <button type="button" class="edit-button" id="edit-button-{{eventbriteID}}" onclick="editEvent(event)"></button>
-      <button class="purchase button" id={{eventbriteID}} type="button">Get Tickets</button>
-    </script>
-
-    <script id="event-edit-template" type="text/x-handlebars-template">
-      <form class="event-submission-form" id="event-edit-form-{{eventbriteID}}">
-        <div class="edit-event-image" style='{{image}}'></div>
-        <input class="edit-event-date" type="datetime-local" name="start" value={{start}}>
-        <input class="edit-event-artist" type="text" name="artists" value={{artists}}>
-        <input class="edit-event-room" type="text" name="room" value={{room}}>
-        <input class="edit-event-price" type="text" name="price" value="{{price}}">
-        <button class="button" id={{eventbriteID}} type="button" onclick="updateEvent()">Update Event</button>
-      </form>
-    </script>
-
-
     <!-- SCRIPTS -->
     <script type="text/javascript" src="./scripts/handlebars-v4.0.11.js"></script>
+    <script type="text/javascript" src="./scripts/handlebars-templates.js"></script>
     <script type="text/javascript" src="./scripts/events.hbs.js"></script>
     <script type="text/javascript" src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
-    <script type="text/javascript" src="./scripts/event-loader.js"></script>
-    <script type="text/javascript" src="./scripts/add-event.js"></script>
-    <script type="text/javascript" src="./scripts/edit-event.js"></script>
-    <script type="text/javascript" src="./scripts/delete-event.js"></script>
+    <!-- <script type="text/javascript" src="./scripts/event-loader.js"></script> -->
+    <script type="text/javascript" src="./scripts/eventbrite.js"></script>
     <script type="text/javascript" src="./scripts/logo-hover-color.js"></script>
 
   </body>
